--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,136 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+section {
+  margin-left: 20%;
+}
+
+h1 {
+  margin-left: 25px;
+  margin-right: 25px;
+  color: #06365f;
+}
+
+p {
+  margin-left: 25px;
+  margin-right: 25px;
+  color: grey;
+  font-weight: 400;
+}
+
+span {
+  font-weight: bold;
+  color: black;
+}
+
+.central-box {
+  position: absolute;
+  top: 100px;
+  left: 200px;
+  width: 900px;
+}
+
+.phones {
+  float: left;
+  padding-left: 0%;
+  padding-right: 0%;
+  margin-top: 0%;
+}
+
+.right-hand-box {
+  float: right;
+}
+
+.login {
+  float: right;
+  margin-top: 20px;
+  height: 40px;
+  width: 80px;
+  color: white;
+  border-radius: 3px;
+  border: 2px solid #1c5380;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.text-login {
+  float: right;
+  margin-top: 10px;
+  margin-right: 5px;
+}
+
+.login img {
+  margin-top: 9px;
+  margin-left: 5px;
+}
+
+.topOfBox {
+  float: left;
+}
+
+.textblock {
+  height: 500px;
+  width: 500px;
+  padding: 15px;
+  float: left;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+}
+
+.download {
+  margin: 30px 20px;
+  padding-left: 20px;
+}
+
+.footer {
+  float: left;
+  color: #1c5380;
+  width: 800px;
+  font-weight: bold;
+  margin-left: 5%;
+  margin-bottom: 10%;
+  font-size: 11px;
+}
+
+.footer-ul {
+  width: 800px;
+  margin: 0 auto;
+}
+
+.footer-ul .footer-li {
+  list-style: none;
+  text-align: center;
+  float: left;
+  width: 10%;
+}
+
+.footer-ul .footer-li2 {
+  list-style: none;
+  text-align: center;
+  float: left;
+  width: 15%;
+}
+
+.footer-item {
+  text-decoration: none;
+  color: #1c5380;
+  font-size: 1em;
+}
+
+.footer-item2 {
+  text-decoration: none;
+  color: grey;
+  font-size: 1em;
 }
