--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,84 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/*Body CSS*/
 body {
+  background: #fff url("../images/bgtile.png") repeat-x;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+/*Main CSS*/
+main {
+  width: 880px;
+  margin: 90px auto 0;
+}
+
+main section.section-left {
+  float: left;
+}
+
+main section.section-right {
+  float: right;
+  width: 500px;
+}
+
+main section.section-right nav button.home {
+  float: right;
+  margin-top: 20px;
+  background: linear-gradient(#6c90ad, #4a7598);
+  border: 1px solid #1c5380;
+  border-radius: 2px;
+  padding: 5px 7px;
+  color: white;
+}
+
+main section.section-right nav button.home img {
+  padding-top: 3px;
+}
+
+main section.section-right nav button.home span {
+  margin-left: 5px;
+  position: relative;
+  bottom: 5px;
+  font-size: 15px;
+}
+
+main section.section-right article {
+  background: url("../images/frame.png") no-repeat;
+  padding: 40px;
+}
+
+main section.section-right article h1 {
+  color: #06365f;
+  font-size: 27px;
+  margin-top: 0;
+  line-height: 1.3;
+}
+
+/*Footer CSS*/
+footer ul {
+  clear: both;
+  list-style: none;
+  margin: 0 0 20px;
+  padding: 0;
+  text-align: center;
+}
+
+footer ul li {
+  color: #999;
+  display: inline;
+  font-size: 11px;
+  font-weight: bold;
+  margin: 0 10px;
+  text-transform: uppercase;
+}
+
+footer ul li a {
+  color: #1c5380;
+  text-decoration: none;
+}
+
+footer ul li a:hover {
+  text-decoration: underline;
 }
