--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,81 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+  padding-top: 110px;
+}
+
+.main{
+  width: 30%;
+  margin-left: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  
+}
+
+button{
+  padding: 10px;
+  font-size: 12px;
+  border-radius: 5px;
+  background-image: linear-gradient(#1c5380, #06365f);
+  color: white;
+}
+
+.logos {
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+
+}
+
+.copy {
+  background-color: white;
+  padding: 23px;
+  box-shadow: 2px 2px 25px grey;
+  border-radius: 5px;
+}
+
+h3 {
+  margin: 0px;
+  font-size: 25px;
+  color: #10375A;
+}
+
+p {
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.txtalign{
+  align-items: center;
+}
+
+footer {
+  text-align: center;
+  text-transform: uppercase;
+  margin: 40px 0px;
+}
+
+footer a {
+  text-decoration: none;
+  font-weight: 800;
+  font-size: 12px;
+  padding: 0 8px;
+  color: #10375A;
+  opacity: 0.7;
+}
+
+.bluebg {
+  background-image: linear-gradient(#1c5380, #06365f);
+  height: 310px;
+;
+
+  
+
 }
