--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,74 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
-body {
+.container {
+  /* background: linear-gradient(180deg, rgb(98, 118, 184) 50%, rgba(235, 243, 243, 0.561) 50%); */
+  background-image: url(../images/bgtile.png);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-}
+ }
+ 
+ .font{
+  /* position: absolute; */
+  height:1000px;
+   margin-top: -500px;
+   background-color: white;
+ }
+ 
+ header{
+  margin: 10%;
+ }
+ 
+ nav{
+  margin: 5%;
+  width: 60%;
+  padding: 2%;
+  display: flex;
+  justify-content : space-between;
+ }
+ 
+ nav div img{
+ height: 50px;
+ width: 50px;
+ }
+ 
+ nav div a{
+  font-size: 1.5em;
+  text-decoration-color: none;
+  color: white;
+ 
+  }
+ nav div{
+  display: flex;
+  padding: 10px;
+  align-items: center;
+  justify-content: space-around;
+  border: 1px solid black;
+  
+  width: 150px;
+  background-image: url(../images/bgtile.png);
+ /* background-color:  rgb(77, 104, 194); */
+ color: white;
+ 
+ }
+ 
+ .bouton{
+ display: flex;
+ justify-content: center;
+ 
+ }
+ .bouton img{
+  margin : 10%;
+ }
+ 
+ 
+ 
+ .description{
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin: 5%;
+  width: 60%;
+  padding: 2%;
+ }
+ 
