--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,101 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+header {
+  margin: 0;
+}
+
+.brand {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.loginButton {
+  color: white;
+  font-weight: bold;
+  font-size: 10px;
+  padding-bottom: 10px;
+  background-color: #1c5380;
+  float: right;
+  height: 30px;
+  width: 80px;
+  margin-right: 330px;
+  margin-top: -60px;
+  border: -1px solid #1c5380;
+}
+
+.home {
+  float: right;
+}
+
+.instaHeader {
+  background-image: url(../images/bgtile.png);
+  width: 100%;
+  height: 200px;
+  background-repeat: repeat-x;
+  margin: 0 0 -110px 0;
+}
+
+.phoneFloat {
+  float: left;
+  margin-left: 180px;
+}
+
+.instaBox {
+  background-image: url(../images/frame.png);
+  width: 40%;
+  float: right;
+  background-repeat: no-repeat;
+  margin-right: 180px;
+}
+
+.instaBox p {
+  margin: 20px 20px 20px 20px;
+}
+
+.instaBox h3 {
+  margin: 20px;
+  color: #1c5380;
+  font-size: 24px;
+  font-weight: bold;
+  width: 60%;
+}
+
+.instaInfo {
+  padding-left: 20px;
+}
+
+.divClear {
+  float: none;
+}
+
+.storeLink {
+  display: inline-block;
+  margin-top: 80px;
+  margin-left: 50px;
+}
+
+.droid { 
+  margin-left: 50px;
+}
+
+.copyright {
+  float: right;
+  text-align: right;
+  margin-right: 220px;
+  margin-bottom: 50px;
+}
+
+footer .footerlinks{
+  margin-top: 50px;
+  text-align: center;
+  display: block;
+  padding-top: 500px;
+  color:#1c5380;
+  font-weight: bolder;
+  text-transform: uppercase;
+  word-spacing: 10px;
+  font-size: 14px;
+}
