--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,66 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+ 
+  
+}
+
+.firstClass {
+  float: right;
+  padding-top: 200px;
+  padding-right: 150px;
+  margin-top: -100px;
+  position: absolute;
+  margin-left: 800px;
+ font-family: 'Times New Roman', Times, serif;
+ font-size: 20px;
+ bottom: 150px;
+}
+
+
+.trClass {
+  background-color: #1c5380;
+  height: 240px;
+  width: auto;
+  
+}
+
+.bottomClass {
+  padding-top: 650px;
+  padding-left: 460px;
+  color: #1c5380;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  word-spacing: 10px; 
+  position: relative;
+  bottom: 100px;
+  
+}
+
+#firstId {
+  padding-left: 900px;
+  padding-top: -600px;
+  
+}
+
+#framePic {
+  margin-left: 700px;
+  margin-top: 150px;
+  height: 350px;
+}
+
+#brandPic {
+  margin-left: 710px;
+  margin-top:-180px;
+  top: 300px;
+}
+
+#twoColor {
+  color: #06365f;
+}
+
+#tdClass {
+  position: relative;
+  top: 390px;
+  right: 500px;
+  
 }
