--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,111 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.phones-img {
+
+  position: absolute;
+  left: 100px;
+  top: 150px;
+}
+
+
+.mainTitle {
+  color: #06365f;
+}
+
+.section1 {
+background: #1c5380;
+height: 320px;
+}
+
+.title-img{
+  margin: 130px;
+  position: relative;
+  left: 470px;
+}
+
+.log-in-button {
+  text-align: center;
+  background: #356892;
+  float: right;
+  margin: 150px;
+  position: relative;
+  right: 40px;
+  border-radius: 3px;
+  border-color: #06365f;
+}
+
+.section2 {
+
+  text-align: left;
+  position: relative;
+  bottom: 100px;
+  margin-left: 600px;
+  background-image: url("../images/frame.png");
+  background-size: center;
+  background-repeat: no-repeat;
+ 
+}
+
+.main-article {
+
+  padding: 40px;
+  margin: 20px;
+  width: 400px;
+
+}
+
+.apple-store{
+
+  float: left;
+  padding: 15px;
+
+}
+
+.google-store{
+
+  float: left;
+  padding: 15px;
+}
+
+.section3 {
+
+  
+}
+
+footer {
+
+  padding: 2px;
+
+}
+
+ul {
+  list-style-type: none;
+  margin: 11px;
+  padding: 2px;
+  overflow: hidden;
+  display: inline-block;
+}
+
+li {
+  float: right;
+}
+
+li a {
+  display: block;
+  color: #1c5380;
+
+  font-size: 16px;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.copy-right {
+
+  float: right;
+  
+  margin-right: 200px;
+  padding: 30px;
+
+}
