--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,167 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/* GENERAL */
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  min-width: 1100px;
 }
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+.clearfix::after {
+  content:'';
+  display: table;
+  clear: both;
+}
+
+/* HEADER */
+
+.main-header__wrapper {
+  margin-top: 160px;
+}
+
+.main-header {
+  min-height:400px;
+  background: linear-gradient(#1c5380 70%, #06365f);
+  border-top: 1px solid transparent;
+}
+
+.main-header__brand {
+  float: right;
+  margin-right: 30px;
+}
+
+.main-header__login {
+  display: inline-block;
+  width: 120px;
+  height: 50px;
+  background: linear-gradient(#6d91af 10%, #325779);;
+  border-radius: 3px;
+  color: white;
+  text-decoration: none;
+  font-weight: 700;
+  float: right;
+  margin-top: 10px;
+  margin-left: 100px;
+  margin-right: 40px;
+  border: 1px solid #3a658a;
+}
+
+.main-header__login img {
+  width: 30px;
+  padding: 10px;
+  vertical-align: center;
+}
+
+.main-header__login span {
+  vertical-align: center;
+  position: relative;
+  top: -15px;
+  left: 5px;
+}
+
+/* MAIN */
+
+.main-wrapper {
+  position: relative;
+  min-height: 150px;
+}
+
+.main-content__phone {
+  position: absolute;
+  top: -430px;
+  left: 100px;
+  width: 360px;
+
+}
+
+.main-content__phone img {
+  width: 100%;
+}
+
+.main-content__description {
+  width: 550px;
+  font-weight: 400;
+  position: absolute;
+  right: 40px;
+  top: -300px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 400px;
+  padding: 10px 10px 0 10px;
+  border-radius: 5px ;
+
+}
+
+.main-content__description .wrapper {
+  background: white;
+  padding: 20px 20px 0 20px;
+}
+
+.main-content__button {
+  margin-right: 30px;
+  display: inline-block;
+}
+
+.main-content__button img {
+  vertical-align: top;
+}
+
+.main-content__header {
+  width: 50%;
+  color: #0a3057;
+}
+
+.main-content__text em {
+  font-weight: 900;
+}
+
+.main-content__text {
+  color:#5d5d5e;
+}
+
+.main-content .button-wrapper {
+  margin-top: 40px;
+}
+
+
+/* FOOTER */
+
+.main-footer {
+  padding: 60px 0;
+}
+
+.main-footer__list {
+  list-style: none;
+  margin: 0;
+  padding: 0 0 0 170px;
+  width: 60%;
+  float: left;
+}
+
+.main-footer__list li {
+  float: left;
+  text-transform: uppercase;
+  padding-right: 25px;
+  color: #40698d;
+  font-weight: 500;
+
+}
+
+.main-footer__copyright {
+  width: 24%;
+  float: right;
+  text-transform: uppercase;
+  color: #b3b4b5;
+  font-weight: 300;
+}
+
+
+
