--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,72 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+h1 {
+  color: #06365f;
+}
+header {
+  background-color: #06365f;
+  display: block;
+  height: 200px;
+}
+
+.header-container {
+  position:relative;
+  top: 100px;
+  left: 50px;
+}
+.login {
+  background-color: #1c5380;
+  width: 85px;
+  height: 36px;
+  box-shadow: 2px 2px 2px 0 black;
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 10px 0px 5px 10px;
+  float: right;
+  margin-right: 80px;
+  /* position:relative;
+  top: -76px;
+  left: 770px; */
+}
+
+.login a {
+  text-decoration: none;
+  color: white;
+}
+.phones {
+  float: left;
+}
+
+.content {
+  display: block;
+  padding: 10 px;
+  box-shadow: 2px 2px 10px 0 #eee;
+  border: 2px solid #eee;
+  border-radius: 5px;
+  position:relative;
+  top: 9px;
+  left: 3px;
+  width: 55vw;
+  padding: 20px;
+  float:right;
+  margin-top: 20px;
+}
+.nav-bar {
+  clear: both;
+}
+
+.nav-bar li {
+  display: block;
+  float: left;
+  margin: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.nav-bar a {
+  text-transform:uppercase;
+  font-weight: bold;
+  text-decoration: none;
+  color: #06365f;
+  height: 76px;
+}
