--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,58 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.description {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  background-color:white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  top: -150px;
+  left: 850px;
+}
+h1 {
+  color: #06365f;
+}
+.logologin {
+  background-color: #1c5380;
+  height: 500px;
+}
+.brand {
+  position: relative;
+  left: 400px;
+  top: 150px;
+}
+.phone {
+  position: relative;
+  top: -800px;
+}
+.buy {
+  position: relative;
+  top: 50px;
+}
+.apple {
+  margin-right: 30px;
+}
+.home {
+  position: relative;
+  left: 750px;
+  top: 95px;
+  border-style: outset;
+  border-color: #1c5380;
+  width: 83px;
+  color: white;
+}
+.info {
+  font-weight: 900;
+  color: #1c5380;
+  position: relative;
+  bottom: 30px;
+  left: 300px;
+  word-spacing: 20px;
+}
+.tree {
+  font-weight: 300;
+  color: gray;
+  word-spacing: 5px;
+}
