--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -37,19 +37,22 @@ h1{
   background-image: url(../images/frame.png);
   width: 31.5em;
   margin-left: 45em;
-  margin-top: -24em; 
+  position: relative;
+  bottom: 38.5em; 
   background-repeat: no-repeat;
 }
 
 .img-phone{
-  margin-top: -14em;
+  position: relative;
+  bottom: 14em;
   margin-left: 20em;
 }
 h2{
   color:#06365f;
   display: inline-block;
-  padding-left: 2em;
+  padding-left: 1.5em;
   font-weight: 525;
+  width: 10em;
 }
 
 p{
@@ -60,7 +63,8 @@ p{
 .btn-LogIn{
   display: block;
   margin-left: 99em;
-  margin-top: -6.5em;
+  position: relative;
+  bottom: 7em;
   background-color: #6c90af;
   height: 4em;
   width: 10em;
