--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,51 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  height: 300px;
+  background-repeat: repeat-x;
+}
+
+.outter-box{
+  display: flex;
+  flex-direction: row;
+  margin: 100px;
+}
+
+.outter-box img{
+  width: auto;
+  flex-shrink: 2;
+  margin-right: 50px;
+}
+
+.inner-box{
+  flex-shrink: 1;
+}
+
+
+.icons{
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+
+.log-in{
+  background-image: linear-gradient(#1C5380, #06365F);
+  padding-left: 5px;
+  display: flex;
+  align-content: center;
+  border: 1px solid #06365f;
+  height: 50px;
+  align-items: center;
+}
+.log-in img{
+  padding: 4px 4px 4px 0;
+  margin: 0;
+}
+
+.log-in p{
+  font-weight: bold;
+  color: white;
+  font-size: 16px;
+  margin: 0;
 }
