--- a/starter-code/main.css
+++ b/starter-code/main.css
@@ -7,7 +7,6 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0px;
-  color: red;
 
 }
 
@@ -19,3 +18,62 @@ body {
   margin: 0; 
 }
 
+.logo {
+  position: relative;
+  top: -425px;
+  left: 500px;
+  
+}
+
+.textbox {
+  margin: 0;
+  background-color: white;
+  width: 500px;
+  padding: 30px;
+  border-radius: 2%;
+  position: relative;
+  top: -400px;
+  left: 500px;
+}
+
+.textbox-h3 {
+  color: #06365f;
+}
+
+.moviles {
+  position: relative;
+  top: -800px;
+  left: 100px;;
+}
+
+.buttlogin {
+ width: 100px;;
+}
+
+.buttons {
+  position: relative;
+  top: -900px;
+  left: 550px;
+}
+
+.button {
+  border: none;
+  padding: 0;
+  border: none;
+}
+
+.footer {
+ position: relative;
+ top:-800px;
+ left: 25%;
+ text-transform: uppercase;
+ color: #1c5380;
+ display: inline;
+}
+
+.copyright {
+  position: relative;
+  top: -828px;
+  left: 900px;
+  display: inline;
+}
