--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,4 +1,4 @@
-/*
+/*.
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
@@ -7,4 +7,67 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+.background{
+background-image:url("../images/bgtile.png");
+background-size:cover;
+height:350px;
+}
+.content{
+  margin-top:-175px;
+
+}
+.phones{
+  position:relative;
+  float:left;
+  margin-left:20%;
+ 
+}
+.button{
+  position:relative;
+  float:right;
+  margin-top:4.5%;
+  margin-right:-10%;
+  width:150px;
+  font-size:10px;
+}
+
+
+.button img{
+  padding:3px 10px;
+  
+}
+
+.right{
+  margin-left:5%;
+  position:relative;
+  float:left;
+  width:35%;
+}
+
+.white{
+  padding:2.5% 10%;
+  border:1px solid black;
+  border-radius:5%;
+  background-color:white;
+}
+footer{
+  text-align:center;
+  padding:2%;
+  clear:both;
+  
+}
+footer a{
+  text-decoration:none;
+  font-weight:bold;
+  color:darkblue;
+}
+#gray{
+  font-weight:bold;
+  color:gray;
+  font-size:0.9em;
+}
+
+h1{
+  color:#000066;
 }
