--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -29,12 +29,7 @@ body {
 	float: left;
 }
 
-.main-wrap {}
-
 .main {
-	/* background-image: url('../images/frame.png'); */
-	border: 1px solid black;
-	/* background-repeat: no-repeat; */
 	float: right;
 	width: 504px;
 	padding: 20px;
@@ -42,10 +37,8 @@ body {
 
 .main-head {
 	position: relative;
-}
-
-.footer {
-	clear: both;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
 .btn-login {
@@ -73,8 +66,19 @@ body {
 	padding-left: 8px;
 }
 
+.main-text-wrap {
+	padding: 10px 35px;
+	background-image: url('../images/frame.png');
+	background-repeat: no-repeat;
+}
+
+.main-text {
+	margin-bottom: 30px;
+}
+
 .main-text h1 {
-	width: 65%;
+	font-size: 28px;
+    width: 68%;
 	color: #003569;
 }
 
@@ -82,7 +86,7 @@ body {
 	font-size: 18px;
 }
 
-.main-buttons a{
+.main-buttons a {
 	text-decoration: none;
 }
 
@@ -96,7 +100,8 @@ body {
 
 .footer {
 	width: 768px;
-    margin: 0 auto;
+	margin: 0 auto;
+	clear: both;
 }
 
 .footer nav {
