--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,38 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0; 
 }
+
+.container {
+  width: 100%;
+  height: 280px;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  background-size: cover;
+  
+}
+
+.inner-container {
+  margin: auto; 
+  width: 80%;
+  height: 100%;
+  background-color: aqua;
+}
+
+.left-side-container {
+  float: left;
+  width: 40%;
+}
+
+.right-side-container {
+  float: right;
+  width: 40%;
+  margin: 10%;
+}
+
+#phones {
+  margin: 10%;
+}
+
+
