--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -15,17 +15,20 @@ body {
 .outter-box{
   display: flex;
   flex-direction: row;
-  margin: 100px;
+  margin: 100px 400px;
 }
 
-.outter-box img{
+.phones{
   width: auto;
+  height: 512px;
   flex-shrink: 2;
-  margin-right: 50px;
+  margin-right: 100px;
 }
 
 .inner-box{
   flex-shrink: 1;
+  width: 100%;
+  max-width: 700px;
 }
 
 
@@ -33,6 +36,8 @@ body {
   display: flex;
   align-items: center;
   flex-direction: row;
+  margin: 0px;
+  justify-content: space-between;
 }
 
 .log-in{
@@ -43,10 +48,19 @@ body {
   border: 1px solid #06365f;
   height: 50px;
   align-items: center;
+  width: 100px;
+  min-width: 100px;
+  justify-content: space-evenly;
 }
 .log-in img{
   padding: 4px 4px 4px 0;
   margin: 0;
+
+}
+
+
+.instagram{
+  margin-right: 80px;
 }
 
 .log-in p{
@@ -54,4 +68,37 @@ body {
   color: white;
   font-size: 16px;
   margin: 0;
+}
+
+.description{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 30px 60px 30px 66px;
+}
+
+.description h2{
+  color: #06365F;
+  font-weight: bold;
+  font-size: 30px;
+  max-width: 320px;
+}
+
+footer{
+  display: flex;
+  justify-content: space-evenly;
+  max-width: 700px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+footer a{
+  text-decoration: none;
+  color: #1C5380;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+footer span{
+  color: gray;
 }
