--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,73 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.background {
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  height: 280px;
+  position: relative;
+}
+
+.wrapper {
+  width: 65%;
+  position: absolute;
+  top: 10%;
+  left: 17.5%;
+}
+
+.insta-logo {
+  position:absolute;
+  left: 40%;
+}
+
+.button-log {
+  background-color: #1c5380;
+  color: white;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 5%;
+  border-color: #06365f;
+  padding: 5px;
+  width: 10%;
+}
+
+
+.main-title {
+  color: #06365f;
+  margin-right: 40%;
+}
+
+.main-text {
+  background-image: url(../images/frame.png);
+  background-size: contain;
+  position: absolute;
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  left:40%;
+  top: 20%;
+  width: 60%;
+  padding: 2.5% 5%;
+}
+
+.page-footer li {
+  display: inline-block;
+  list-style-type: none;
+  margin: 0 10px;
+}
+
+.page-footer span {
+  display: inline-block;
+}
+
+.page-footer { 
+  position: absolute;
+  bottom: 10%;
+  left: 25%;
+  display: block;
+  color: #1c5380;
+  font-weight: 200;
+}
+
